# app/Http/Controllers/api/v1/CustomerController.php
@@ -73,7 +73,48 @@ class CustomerController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     * path="/api/v1/customers",
+     * tags={"Customer"},
+     * summary="وارد کردن اطلاعات ",
+     * description="وارد کردن اطلاعات ",
+     * security={ {"sanctum": {} }},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *            mediaType="application/json",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"firstname","lastname","date_of_birth","email","bank_account"},
+     *               @OA\Property(property="firstname", type="string"),
+     *               @OA\Property(property="lastname", type="string"),
+     *               @OA\Property(property="date_of_birth", type="date"),
+     *               @OA\Property(property="email", type="string"),
+     *               @OA\Property(property="phonenumber", type="+1 650 253 0000"),
+     *               @OA\Property(property="bank_account", type="string"),
+     *            ),
+     *        ),
+     *    ),
+     *    @OA\Parameter(
+     *          description="application/json;",
+     *          in="header",
+     *          name="Accept",
+     *          required=true,
+     *          @OA\Schema(type="string"),
+     *      ),
+     *
+     *     @OA\Response(
+     *          response=200,
+     *          description="وارد کردن اطلاعات ",
+     *          @OA\JsonContent(
+     *             @OA\Examples(
+     *                summary="وارد کردن اطلاعات ",
+     *                example ="وارد کردن اطلاعات ",
+     *                value = {"status":"success","code":200,"message":"Saved","errors":{},"data":{"id":null,"firstname":null,}}
+     *              )
+     *          )
+     *       ),
+     * )
      */
     public function store(StoreCustomerRequest $request)
     {
@@ -114,7 +155,54 @@ class CustomerController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Put(
+     * path="/api/v1/customers/{customer}",
+     * tags={"Customer"},
+     * summary="به روز رسانی اطلاعات ",
+     * description="به روز رسانی اطلاعات ",
+     * security={ {"sanctum": {} }},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *            mediaType="application/json",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"firstname","lastname","date_of_birth","email","bank_account"},
+     *               @OA\Property(property="firstname", type="string"),
+     *               @OA\Property(property="lastname", type="string"),
+     *               @OA\Property(property="date_of_birth", type="date"),
+     *               @OA\Property(property="email", type="string"),
+     *               @OA\Property(property="phonenumber", type="+1 650 253 0000"),
+     *               @OA\Property(property="bank_account", type="string"),
+     *            ),
+     *        ),
+     *    ),
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="query",
+     *         description="Customer ID",
+     *         required=true,
+     *      ),
+     *    @OA\Parameter(
+     *          description="application/json;",
+     *          in="header",
+     *          name="Accept",
+     *          required=true,
+     *          @OA\Schema(type="string"),
+     *      ),
+     *
+     *     @OA\Response(
+     *          response=200,
+     *          description="به روز رسانی اطلاعات ",
+     *          @OA\JsonContent(
+     *             @OA\Examples(
+     *                summary="به روز رسانی اطلاعات ",
+     *                example ="به روز رسانی اطلاعات ",
+     *                value = {"status":"success","code":200,"message":"Saved","errors":{},"data":{"id":null,"firstname":null,}}
+     *              )
+     *          )
+     *       ),
+     * )
      */
     public function update(UpdateCustomerRequest $request, Customer $customer)
     {
@@ -140,7 +228,7 @@ class CustomerController extends Controller
 
      /**
      * @OA\Delete(
-     * path="/api/v1/customers",
+     * path="/api/v1/customers/{customer}",
      * tags={"Customer"},
      * summary="حذف مشتری ",
      * description="حذف مشتری",
@@ -153,6 +241,12 @@ class CustomerController extends Controller
      *          @OA\Schema(type="string"),
      *      ),
      *
+     *    @OA\Parameter(
+     *         name="id",
+     *         in="query",
+     *         description="Customer ID",
+     *         required=true,
+     *      ),
      *     @OA\Response(
      *          response=200,
      *          description="حذف مشتری",
